--- a/西瓜书/西瓜书.tex
+++ b/西瓜书/西瓜书.tex
@@ -26,6 +26,9 @@
 
 交代了关于机器学习中常见的名词意思
 
+
+\newpage
+
 \section{模型评估与选择}
 
 第二章有点概率论
@@ -64,6 +67,8 @@
 
 \subsection{偏差与方差}
 
+\newpage
+ 
 \section{线性模型}
 
 
